--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+<div id="logos">
+
+</div>
+<nav>
+    <ul id="menu">
+        <li>Home</li>
+        <li>Como economizar</li>
+        <li>Jogos</li>
+    </ul>
+</nav>
+    </header>
+  
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
