--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
 <div id="logos">
-
+<img src="./imagens/Logos/Conta Gotas/logo_conta_gotas.png" alt="">
+<img src="./imagens/Logos/Liquefeito/logo_liquefeito.png" alt="">
 </div>
 <nav>
     <ul id="menu">
@@ -23,8 +24,49 @@
     <main>
 
     </main>
-    <footer>
+    <div id="geral">
+        <div id="video">
+<h1>Conheça nosso projeto</h1>
+        </div>
+        <div id="lado-direito">
+<div id="redes">
+    <h1>Rede sociais</h1>
 
+</div>
+<div id="login">
+    <h1>Faça seu login</h1>
+
+</div>
+        </div>
+        <div id="apoio">
+            <h1>Apoio</h1>
+
+        </div>
+
+    </div>
+    <footer>
+<div class="item">
+    <h1>Sobre nós</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, quaerat consequuntur illo cumque quasi ratione fuga deleniti sapiente dolorum laborum dolorem inventore saepe provident sed obcaecati sit itaque asperiores iusto.</p>
+    <img src="./imagens/Logos/Conta Gotas/logo_conta_gotas.png" alt="">
+</div>
+<div class="item">
+    <h1>Mapa do site</h1>
+    <h2>Como economizar</h2>
+    <h2>Home</h2>
+    <h2>Jogos</h2>
+    <h2>cadastro</h2>
+    <h2>Login</h2>
+</div>
+<div class="item">
+    <h1>Contato</h1>
+    <p>Telefone: 85 4002-8922</p>
+    <p>Whatsapp: 27 97070-7070</p>
+    <p>Email: contagotas@gmail.com</p>
+    <p>Endereço: rua margarida vieira de armorim</p>
+    <p>Segunda a sexta, das 7h ás 20h <br>
+    Exceto feriados nacionais e locais</p>
+</div>
     </footer>
 </body>
 </html>
